--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     {% if title %}
         <title>Flask Blog - {{ title }}</title>
     {% else %}
@@ -17,35 +18,41 @@
 <body>
   <header>
     <nav>
-
+      <ul>
+        <li><a href="{{ url_for('home') }}">Home</a></li>
+        <li><a href="{{ url_for('login') }}">Login</a></li>
+        <li><a href="{{ url_for('register') }}">Register</a></li>
+      </ul>
     </nav>
   </header>
-
-  <div class="container">
-    <div class="left_side_bar">
-
-      <!--
-
-        left side bar requirements that are gonna be in the all site reoutes.
-
-       -->
-
-
+  <main>
+    <div class="row container">
+        <div class="col-md-8">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                  {{ message }}
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+          {% block content %}{% endblock %}
+        </div>
+        <div class="col-md-4">
+          <div class="content-section">
+            <h3>Our Sidebar</h3>
+            <p class='text-muted'>You can put any information here you'd like.
+              <ul class="list-group">
+                <li class="list-group-item list-group-item-light">Latest Posts</li>
+                <li class="list-group-item list-group-item-light">Announcements</li>
+                <li class="list-group-item list-group-item-light">Calendars</li>
+                <li class="list-group-item list-group-item-light">etc</li>
+              </ul>
+            </p>
+          </div>
+        </div>
     </div>
-    <div class="main-content">
-    {% block content %}
-    {% endblock content%}
-    </div>
-    <div class="right_side_bar">
-
-
-      <!--
-
-        right side bar requirements that are gonna be in the all site reoutes.
-
-       -->
-
-    </div>
-  </div>
+  </main>
 </body>
 </html>
