--- a/templates/register.html
+++ b/templates/register.html
@@ -6,19 +6,19 @@
         <fieldset>
             <legend>Join Today</legend>
             <div>
-                {{form.username.label}}
+                {{form.username.label}} : <br>
                 {{form.username}}
             </div>
             <div>
-                {{form.email.label}}
+                {{form.email.label}} : <br>
                 {{form.email}}
             </div>
             <div>
-                {{form.password.label}}
+                {{form.password.label}} : <br>
                 {{form.password}}
             </div>
             <div>
-                {{form.confirm_password.label}}
+                {{form.confirm_password.label}} : <br>
                 {{form.confirm_password}}
             </div>
             <div>
