--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -28,17 +28,12 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('register') }}">Register</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('about') }}">About Us</a>
             </li>
           </ul>
-          <form class="d-flex input-group w-auto">
+          <form class="d-flex input-group w-auto mr-auto">
             <input
               type="search"
               class="form-control"
@@ -49,6 +44,23 @@
               Search
             </button>
           </form>
+          <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+            {% if current_user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('account') }}">Account</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+            </li>
+            {% endif %}
+          </ul>
         </div>
       </div>
     </nav>
