--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -7,12 +7,34 @@
             <fieldset>
                 <legend class="border-bottom mb-4"><h1>Login</h1></legend>
                 <div class="form-group">
-                    {{form.username.label(class="form-label")}} : <br>
-                    {{form.username(class="form-control")}}
+                    {{form.email.label(class="form-label")}} : <br>
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg") }}
+                    {% endif %}
                 </div>
                 <div class="form-group">
                     {{form.password.label(class="form-label")}} : <br>
-                    {{form.password(class="form-control")}}
+                    {% if form.password.errors %}
+                        {{ form.password(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.password.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.password(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-check">
+                    {{ form.remember(class="form-check-input") }}
+                    {{ form.remember.label(class="form-check-label") }}
                 </div>
                 <div class="form-group">
                     {{form.submit(class="btn btn-outline-info")}}
