--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,4 +1,16 @@
 {% extends 'layout.html' %}
 {% block content %}
-    <h1>{{ current_user.username}}</h1>
+
+    <div class="content-section">
+      <div class="media">
+        <img class="rounded-circle account-img" src="{{ image_file}}" >
+        <div class="media-body">
+          <h2 class="account-heading">{{current_user.username}}</h2>
+          <p class="text-secondary">{{current_user.email}}</p>
+          <p class="text-secondary"> <a href=" {{url_for('update_account')}} ">Update your informations</a></p>
+        </div>
+      </div>
+      <!-- FORM HERE -->
+    </div>
+
 {% endblock content %}
