--- a/flaskblog/templates/update_account.html
+++ b/flaskblog/templates/update_account.html
@@ -3,7 +3,7 @@
 
 <div class="container">
     <div class="col-10">
-        <form method="POST" action="">
+        <form method="POST" action="" enctype="multipart/form-data">
             {{form.hidden_tag()}}
             <fieldset>
                 <legend class="border-bottom mb-4"><h1>Update Your Account !</h1></legend>
@@ -60,6 +60,15 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
+                    {{form.picture.label(class="form-label")}} : <br>
+                    {{form.picture(class="form-label")}}
+                    {% if form.confirm_new_password.errors %}
+                        {% for error in form.confirm_new_password.errors %}
+                            <span class="text-danger"> error </span>
+                        {% endfor %}
+                    {% endif %}
+                <div class="form-group">
+                    <br>
                     {{form.submit(class="btn btn-outline-info")}}
                 </div>
             </fieldset>
