--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -1,4 +1,3 @@
-
 .article-img {
 max-width: 100%;
 min-width: 50px;
@@ -96,15 +95,15 @@ a.article-title:hover {
   font-size: 2.5rem;
 }
 
+/* The navigation bar
 
-/* The navigation bar */
 .navbar {
-  overflow: hidden;
-  background-color: #333;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
+
 
 /* Links inside the navbar */
 .navbar a {
@@ -125,3 +124,4 @@ a.article-title:hover {
 .main {
   margin-top: 30px; /* Add a top margin to avoid content overlay */
 }
+*/
