--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    {% block link_css %}
+    {% endblock %}
+
     {% if title %}
         <title>Flask Blog - {{ title }}</title>
     {% else %}
@@ -18,9 +20,9 @@
 <body>
   <header>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-navbar ">
       <!-- Container wrapper -->
-      <div class="container">
+      <div class="container-fluid">
         <!-- Navbar brand -->
         <h3 class="navbar-brand" >Flask Blog</h3>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -64,9 +66,10 @@
         </div>
       </div>
     </nav>
+    <div class="navbar-spacer"></div>
   </header>
   <main>
-    <div class="container">
+    <div class="container-fluid">
           <div class="col-md">
             {% with messages = get_flashed_messages(with_categories=true) %}
               {% if messages %}
