Password reset feature by email sending added Succefully

--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -39,6 +39,9 @@
                 <div class="form-group">
                     {{form.submit(class="btn btn-outline-info")}}
                 </div>
+                <small>
+                    <a href="{{ url_for('reset_request') }}">You forget your password</a>
+                </small>
             </fieldset>
             <div>
                 <small>
