--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -7,7 +7,7 @@
         <div class="media-body">
           <h2 class="account-heading">{{current_user.username}}</h2>
           <p class="text-secondary">{{current_user.email}}</p>
-          <p class="text-secondary"> <a href=" {{url_for('update_account')}} ">Update your informations</a></p>
+          <p class="text-secondary"> <a href=" {{url_for('users.update_account')}} ">Update your informations</a></p>
         </div>
       </div>
     </div>
