--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -64,7 +64,7 @@
             </fieldset>
             <div>
                 <small>
-                    Already have an acount <a href="{{ url_for('login') }}">Login</a>
+                    Already have an acount <a href="{{ url_for('users.login') }}">Login</a>
                 </small>
             </div>
         </form>
