--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     {% block link_css %}
     {% endblock %}
 
@@ -19,20 +19,35 @@
 
 <body>
   <header>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-navbar ">
-      <!-- Container wrapper -->
+
+
+    <div class="my_navbar">
+      <a class="left" href="{{ url_for('main.home') }}">Home</a>
+      <a class="left" href="#news">News</a>
+      <a class="left" href="{{ url_for('main.about') }}">About Us</a>
+      {% if current_user.is_authenticated %}
+        <a class="right" href="{{ url_for('users.account') }}">Account</a>
+        <a class="right" href="{{ url_for('users.logout') }}">Logout</a>
+        <a class="right" href="{{ url_for('users.login') }}">Login</a>
+      {% else %}
+          <a class="right" href="{{ url_for('users.login') }}">Login</a>
+          <a class="right" href="{{ url_for('users.register') }}">Register</a>
+      {% endif %}
+    </div>
+
+
+<!--     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-navbar ">
+
       <div class="container-fluid">
-        <!-- Navbar brand -->
         <h3 class="navbar-brand" >Flask Blog</h3>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
+              <a class="nav-link active" aria-current="page" href="{{ url_for('main.home') }}">Home</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('about') }}">About Us</a>
+              <a class="nav-link" href="{{ url_for('main.about') }}">About Us</a>
             </li>
           </ul>
           <form class="d-flex input-group w-auto mr-auto">
@@ -49,28 +64,31 @@
           <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
             {% if current_user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('account') }}">Account</a>
+              <a class="nav-link" href="{{ url_for('users.account') }}">Account</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+              <a class="nav-link" href="{{ url_for('users.logout') }}">Logout</a>
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+              <a class="nav-link" href="{{ url_for('users.login') }}">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+              <a class="nav-link" href="{{ url_for('users.register') }}">Register</a>
             </li>
             {% endif %}
           </ul>
         </div>
       </div>
-    </nav>
-    <div class="navbar-spacer"></div>
+    </nav> -->
   </header>
   <main>
-    <div class="container-fluid">
-          <div class="col-md">
+    <div class="my_container">
+          <div class="side_bar_left">
+            {% block sideBarLeft %}
+            {% endblock %}
+          </div>
+          <div class="my_content">
             {% with messages = get_flashed_messages(with_categories=true) %}
               {% if messages %}
                 {% for category, message in messages %}
@@ -80,7 +98,12 @@
                 {% endfor %}
               {% endif %}
             {% endwith %}
-            {% block content %}{% endblock %}
+            {% block content %}
+            {% endblock %}
+          </div>
+          <div class="side_bar_right">
+            {% block sideBarRight %}
+            {% endblock %}
           </div>
     </div>
   </main>
